Fix icon spacing issue

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,10 +14,12 @@
   .cmai-activity-icon {
     @include size(var('cmai-activity-icon-size'));
     border-radius: var('cmai-activity-icon-border-radius');
-    margin-left: 7px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    & + & {
+      margin-left: 5px;
+    }
   }
   // Remove rich presence icon
   .icon-15YQ1T {
